<resources>
    <string name="app_name">FREYA</string>

    <string name="sign_in">Войти</string>
    <string name="freya">FREYA</string>
    <string name="welcome">Добро подаловать!</string>
    <string name="welcome_info1">Чтобы записаться на стрижку, вам</string>
    <string name="welcome_info2">необходимо войти в аккаунт!</string>

    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="number">Номер</string>

    <string name="to_continue">Продолжить</string>
    <string name="not_registered">Ещё не зарегистрированы?</string>
    <string name="to_register">Зарегистрироваться</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="login_data">Данные для входа</string>
    <string name="person_data">Персональные данные</string>

    <string name="gender_male">Мужчина</string>
    <string name="gender_female">Женщина</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="to_change">Изменить</string>
    <string name="bel_number_code">+375</string>

    <string-array name="mails">
        <item>mail.ru</item>
        <item>gmail.com</item>
        <item>yandex.ru</item>
    </string-array>

    <string name="text_edit_account">Редактировать профиль</string>
    <string name="text_location">Местоположение</string>
    <string name="text_contacts">Контакты</string>
    <string name="text_go_out">Выйти</string>
    <string name="text_settings">Настройки</string>
    <string name="text_make_note">Записаться</string>
    <string name="text_your_records">Ваши записи</string>
    <string name="text_change_info">Редактирование информации</string>
    <string name="text_change_personal_info">Изменять персональную информацию можно только в настрйках аккаунта</string>
    <string name="phone_number">Номер телефона</string>
    <string name="haircut">Стрижка</string>
    <string name="haircut_male">Мужская</string>
    <string name="haircut_female">Женская</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="address">Адрес</string>

    <string-array name="times">
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
    </string-array>

</resources>