<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.haircut.fragment.HaircutInformationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:text="@string/surname"
            android:textColor="@color/dark_gray"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_haircut_surname"
            style="@style/et_not_edit"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:text="@string/name"
            android:textColor="@color/dark_gray"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_haircut_name"
            style="@style/et_not_edit"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:text="@string/patronymic"
            android:textColor="@color/dark_gray"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_haircut_patronymic"
            style="@style/et_not_edit"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:text="@string/phone_number"
            android:textColor="@color/dark_gray"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/et_haircut_number"
            style="@style/et_not_edit"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:text="@string/haircut"
            android:textColor="@color/dark_gray"
            android:textSize="17sp" />

        <RadioGroup
            android:id="@+id/radio_group_haircut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_btn_male_hair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/haircut_male"
                android:textColor="#535353"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_btn_female_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/haircut_female"
                android:textColor="#535353"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:text="@string/date"
            android:textColor="@color/dark_gray"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/spinner_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/round_angles_gray6" />

    </LinearLayout>
</FrameLayout>