<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.account.fragment.AccountDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_freya_salon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/freya_salon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tw_surname"
                style="@style/account_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                app:layout_constraintLeft_toRightOf="@id/img_freya_salon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tw_name"
                style="@style/account_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="4dp"
                app:layout_constraintLeft_toRightOf="@id/img_freya_salon"
                app:layout_constraintTop_toBottomOf="@id/tw_surname" />

            <TextView
                android:id="@+id/tw_patronymic"
                style="@style/account_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="4dp"
                app:layout_constraintLeft_toRightOf="@id/img_freya_salon"
                app:layout_constraintTop_toBottomOf="@id/tw_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@color/gray" />

        <Button
            android:id="@+id/btn_edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:text="@string/text_edit_account" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/text_location" />

            <Button
                android:id="@+id/btn_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="40dp"
                android:text="@string/text_contacts" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>